# Facial-Recognition

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: main.cpp
src/training_data/: createCSVFile.py  data.csv
src/training_data/s1/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s10/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s11/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s12/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s13/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s14/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s15/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s16/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s17/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s18/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s19/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s2/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s20/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
src/training_data/s21/: 1.pgm  10.pgm  2.pgm  3.pgm  4.pgm  5.pgm  6.pgm  7.pgm  8.pgm  9.pgm
(+260 files in other folders)
